Fix position fixed ẃhatsapp icon, acrecentei no css backface-visibility: hidden;

--- a/menu003/estilos/style.css
+++ b/menu003/estilos/style.css
@@ -19,7 +19,7 @@ header img {
     top: 90%;
     right: 3%;
     width: 50px;
-    
+    backface-visibility: hidden;
 }
 
 #sideBar {
